--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -10,7 +10,7 @@ body {
 
 .main-container {
     width: 100%;
-    max-width: 767.99px;
+    max-width: 2000px;
     box-sizing: border-box;
     height: 100%;
   }
@@ -135,14 +135,15 @@ body {
     bottom: 30px;    
     z-index: 1;
     padding-bottom: 30px;
-    margin: 0;
+    margin:0;
     top: -70px;
   }
 
 .titre_lacarte_coeur {
     position: relative;
-    width: 95%;
+    width: 70%;
     padding-left: 15px;
+    
   }
 
 .titre_lacarte {
@@ -159,27 +160,6 @@ body {
     width: 100%;
   }
 
-.menu1, .menu2, .menu3, .menu4, .menu5, .menu6, .menu7, .menu8, .menu9, .menu10  {
-  width: 98%;
-  height: 72px;
-  margin: auto;
-  display:flex;
-  align-content:center;
-  align-items:center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content:center;
-  padding: 0.1rem;
-  margin: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  transition:all 0.5s;
-  -webkit-transition:all 0.5s;
-  -moz-transition:all 0.5s;
-  -ms-transition:all 0.5s;
-  -o-transition:all 0.5s;
- }
 
 .menu  {
     width: 98%;
@@ -200,8 +180,7 @@ body {
     -webkit-transition:all 0.5s;
     -moz-transition:all 0.5s;
     -ms-transition:all 0.5s;
-    -o-transition:all 0.5s;
-   
+    -o-transition:all 0.5s;   
 }
 
 .article {
@@ -229,14 +208,14 @@ body {
     height:69px;
     background: rgba(255, 255, 255, 1);
     border-radius: 15.04px;
-    box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4.011494159698486px 8.043103218078613px 0px rgba(0, 0, 0, 0.1);
     display:flex;
     justify-content:flex-end;
     align-items:end;
-    overflow: hidden;    
+    overflow: hidden;
+    margin-bottom: 10px;   
   }
    
-  
 .menu:hover .plats .validation {
     width:80px;
     position: relative;
@@ -247,9 +226,10 @@ body {
 .menu-txt {
     height:75px;
     width: 100%;
-    margin-left: 10px;
+    padding-left: 10px;
     display: flex;   
-    justify-content: space-between;
+    justify-content:center;
+    margin: auto;
     flex-direction: column;
     overflow: hidden;
     white-space: nowrap;
@@ -274,6 +254,7 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
     padding-right: 10px;
+    padding-bottom: 10px;
   }
  
 .titre_menus {
@@ -290,6 +271,7 @@ body {
 .entrees, .plates, .desserts {
     gap: 5px; 
     margin-left: 5px;
+    
   }
 
 .entrees {
@@ -318,7 +300,8 @@ body {
     border-bottom: 3px solid rgba(153, 226, 208, 1);
     width: 10%;
     height: 23px;
-    padding-top: 10px;     
+    padding-top: 10px;
+    margin-bottom: 10px;     
   }
   
 .commander {
@@ -340,11 +323,108 @@ body {
     -webkit-filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   }
 
-//Media query Desktop//
-@media (min-width: 1024px) and (max-width: 2000px){
+ 
+  //Media query Tablette//
+@media (min-width: 767.98px) and (max-width: 1023.98px) {
   
   .main-container{
-    min-width: 1024px;
+    min-width: 767.98px;
+    width: 100%;
+  }
+
+  .section-title3 {
+    padding-left: 10px;
+  }
+
+  .fonctionnement {
+    width: 100%;
+    font-size: 14px;    
+     
+  }
+
+  .cartes {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+    width: 100%;    
+    margin: auto;
+   
+  }
+
+  .carte, .enchantee, .lapalette {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    align-items: center;
+    flex-direction:row;
+    width: 350px;
+    
+  }
+  
+  .img-enchantee-accueil, .img-lapalette-accueil {
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 200%;
+    position: absolute;
+    top: 0px;
+  }
+ 
+  .carte-txt2 {
+    top:41%;
+  }
+
+  .lacarte {
+    width: 80%;
+    align-items: center;
+    margin: auto;
+  }
+  
+  .menu {
+    width: 60%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+
+  .subtitle_lacarte {
+    width: 5%;
+   margin-left: 285px;  
+  }
+
+  .etape {
+    display:inline-block;
+    justify-content:center;
+    flex-direction: row;
+    width: 30%;
+    margin: auto;
+    padding: 0;
+    padding-right: 20px;
+  }
+  
+  .titre_lacarte_coeur {
+    position: relative;
+    width: 70%;
+    padding-left: 200px;
+    
+  }
+
+  .subtitle_lacarte {
+    margin-left: 20%;
+    width: 5%;
+  }
+
+  
+}
+
+  //Media query Desktop 1024px//
+@media (min-width: 1023.98px) and (max-width: 1439.98px){
+
+  .main-container{
+    max-width: 1439.98px;
     width: 100%;
   }
 
@@ -370,11 +450,11 @@ body {
   .cartes {
     display:flex;
     flex-wrap: wrap;
-    justify-content:space-around;
+    justify-content:space-evenly;
     align-items: center;
     align-content: center;
     flex-direction: row;
-    width: 90%;    
+    width: 100%;    
     margin: auto;
    
   }
@@ -385,7 +465,8 @@ body {
     justify-content:flex-start;
     align-items: center;
     flex-direction:row;
-    width: 400px;
+    width: 360px;
+    
   }
   
   .img-enchantee-accueil, .img-lapalette-accueil {
@@ -408,20 +489,119 @@ body {
   }
 
   .titre_lacarte_coeur {
-    width: 30%;
-    align-items:center;   
-    margin: auto;    
+    position: relative;
+    width: 70%;
+    padding-left: 290px;
+     
   }
-  
+
+  .titre_lacarte {
+    font-size: 25px;
+  }
+
   .menu {
-    width: 60%;
+    width: 50%;
     justify-content: center;
     align-items: center;
     margin: auto;
   }
 
   .subtitle_lacarte {
-    width: 5%;
-   margin-left: 165px;  
+    width: 4%;
+   margin-left: 205px;  
   }
 }
+
+//Media query Desktop > 1024px//
+@media (min-width: 1439.98px) and (max-width: 2000px){
+  
+  .main-container{
+    max-width: 2000px;
+    width: 100%;
+  }
+
+  .fonctionnement {
+    width: 90%;
+    margin: auto;
+  }
+
+  .etape {
+    display:inline-block;
+    justify-content:center;
+    flex-direction: row;
+    width: 30%;
+    margin: auto;
+    padding: 0;
+    padding-right: 20px;
+  }
+
+  .section-title3 {
+    padding-left: 70px;
+  }
+
+  .cartes {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+    width: 100%;    
+    margin: auto;
+   
+  }
+
+  .carte, .enchantee, .lapalette {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    align-items: center;
+    flex-direction:row;
+    width: 500px;
+    
+  }
+  
+  .img-enchantee-accueil, .img-lapalette-accueil {
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 200%;
+    position: absolute;
+    top: 0px;
+  }
+ 
+  .carte-txt2 {
+    top:41%;
+  }
+
+  .lacarte {
+    width: 80%;
+    align-items: center;
+    margin: auto;
+  }
+
+  .titre_lacarte_coeur {
+    position: relative;
+    width: 70%;
+    padding-left: 450px;
+     
+  }
+
+  .titre_lacarte {
+    font-size: 25px;
+  }
+
+  .menu {
+    width: 45%;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+
+  .subtitle_lacarte {
+    width: 3%;
+   margin-left: 320px;  
+  }
+
+}
+
