Ajustement titres sections

--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -203,9 +203,17 @@ abbr {
       left: 450px;
       bottom: 60px;
     }
-
     .gris {
-      left: 210px;
+      left: 260px;
     }
+
+    .gris2 {
+      left: 220px;
+    }
+
+    .gris3 {
+      left: 240px;
+    }
+    
     
   }
