--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -486,8 +486,9 @@ body {
 
   .lacarte {
     width: 80%;
-    align-items: center;
+    align-items:center;
     margin: auto;
+   
   }
 
   .titre_lacarte_coeur {
@@ -502,9 +503,10 @@ body {
   }
 
   .menu {
-    width: 60%;
+    width: 50%;
     justify-content:center;
     align-items: center;
+    margin: auto;
    
   }
 
@@ -518,13 +520,13 @@ body {
 @media (min-width: 1439.98px) and (max-width: 2000px){
   
   .main-container{
-    max-width: 2000px;
+    min-width: 1439.98px;
     width: 100%;
   }
 
   .fonctionnement {
     width: 90%;
-    padding-left: 120px;
+    padding-left: 8%;
   }
 
 
@@ -539,7 +541,8 @@ body {
   }
 
   .section-title3 {
-    padding-left: 130px;
+    padding-left: 9.5%;
+
   }
 
   .cartes {
