--- a/Sass/main.css
+++ b/Sass/main.css
@@ -290,13 +290,13 @@ footer {
     position: relative;
     left: 88%;
     top: 23px;
-    width: 10%;
+    width: 8%;
   }
   .logo_footer2 {
     position: relative;
     left: 87%;
     bottom: 5px;
-    width: 10%;
+    width: 8%;
     margin-left: 10px;
   }
   .fa-handshake-simple {
@@ -887,9 +887,10 @@ body {
     font-size: 25px;
   }
   .menu {
-    width: 60%;
+    width: 50%;
     justify-content: center;
     align-items: center;
+    margin: auto;
   }
   .subtitle_lacarte {
     width: 4%;
@@ -898,12 +899,12 @@ body {
 }
 @media (min-width: 1439.98px) and (max-width: 2000px) {
   .main-container {
-    max-width: 2000px;
+    min-width: 1439.98px;
     width: 100%;
   }
   .fonctionnement {
     width: 90%;
-    padding-left: 120px;
+    padding-left: 8%;
   }
   .etape {
     display: inline-block;
@@ -915,7 +916,7 @@ body {
     padding-right: 20px;
   }
   .section-title3 {
-    padding-left: 130px;
+    padding-left: 9.5%;
   }
   .cartes {
     display: flex;
@@ -1284,7 +1285,13 @@ abbr {
     bottom: 60px;
   }
   .gris {
-    left: 210px;
+    left: 260px;
+  }
+  .gris2 {
+    left: 220px;
+  }
+  .gris3 {
+    left: 240px;
   }
 }
 html, body {
