--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -26,19 +26,20 @@
     line-height: 19px;
     letter-spacing: 0em;
     border: none;
-    
     padding: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
+
 }
 
-.searchbutton a:hover {
+.searchbutton:hover {
     border-image-outset: 0px 4px 10px 0px;
     opacity: 0.8;
-    filter: brightness(1.75);
-    -webkit-filter: brightness(1.75);
-    
+    background-color: lighten(#9356dc, 5%);
+    background-blend-mode: lighten;
+    box-shadow: 0px 4px 10px 0px #00000050;  
 }
+
 
 .searchbutton a {
     color: #fff;
@@ -51,6 +52,7 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     display: block;
+   
   }
 
    //Media query > Tablette//
