--- a/Sass/main.css
+++ b/Sass/main.css
@@ -1010,11 +1010,12 @@ body {
   padding-bottom: 15px;
 }
 
-.searchbutton a:hover {
+.searchbutton:hover {
   border-image-outset: 0px 4px 10px 0px;
   opacity: 0.8;
-  filter: brightness(1.75);
-  -webkit-filter: brightness(1.75);
+  background-color: #a16be0;
+  background-blend-mode: lighten;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3137254902);
 }
 
 .searchbutton a {
@@ -1191,11 +1192,11 @@ abbr {
 
 .fa-heart::before {
   font-weight: bold;
-  transition: opacity 1.5s ease;
-  -webkit-transition: opacity 1.5s ease;
-  -moz-transition: opacity 1.5s ease;
-  -ms-transition: opacity 1.5s ease;
-  -o-transition: opacity 1.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
   vertical-align: baseline;
 }
 
