--- a/Sass/base/_animations.scss
+++ b/Sass/base/_animations.scss
@@ -11,6 +11,27 @@
 100% { opacity: 0; z-index: 0;}
 }
 
+@keyframes rideau {
+  0% {
+    z-index: 3;
+  }
+  50% {
+    transform: translateY(-10vh);
+    -webkit-transform: translateY(-10vh);
+    -moz-transform: translateY(-10vh);
+    -ms-transform: translateY(-10vh);
+    -o-transform: translateY(-10vh);
+    z-index: 3;
+}
+100% {
+  transform: translateY(-100vh);
+  -webkit-transform: translateY(-100vh);
+  -moz-transform: translateY(-100vh);
+  -ms-transform: translateY(-100vh);
+  -o-transform: translateY(-100vh);
+}
+}
+
 //Animation pour le check//
 
 @keyframes transleteX {
