--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -29,6 +29,7 @@
     padding: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
+   
 
 }
 
@@ -37,7 +38,9 @@
     opacity: 0.8;
     background-color: lighten(#9356dc, 5%);
     background-blend-mode: lighten;
-    box-shadow: 0px 4px 10px 0px #00000050;  
+    box-shadow: 0px 4px 10px 0px #00000050;
+    z-index: 2;
+    
 }
 
 
