--- a/Sass/main.css
+++ b/Sass/main.css
@@ -35,6 +35,26 @@
     z-index: 0;
   }
 }
+@keyframes rideau {
+  0% {
+    z-index: 3;
+  }
+  50% {
+    transform: translateY(-10vh);
+    -webkit-transform: translateY(-10vh);
+    -moz-transform: translateY(-10vh);
+    -ms-transform: translateY(-10vh);
+    -o-transform: translateY(-10vh);
+    z-index: 3;
+  }
+  100% {
+    transform: translateY(-100vh);
+    -webkit-transform: translateY(-100vh);
+    -moz-transform: translateY(-100vh);
+    -ms-transform: translateY(-100vh);
+    -o-transform: translateY(-100vh);
+  }
+}
 @keyframes transleteX {
   0% {
     transform: translateX(0px);
@@ -457,6 +477,7 @@ body {
 
 .etape {
   padding-left: 15px;
+  padding-bottom: 10px;
 }
 
 .fonctionnement {
@@ -676,7 +697,7 @@ body {
   position: relative;
   bottom: 15px;
   font-weight: 500;
-  font-size: 0.85rem;
+  font-size: 0.75rem;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -874,9 +895,8 @@ body {
     top: 41%;
   }
   .lacarte {
-    width: 80%;
+    width: 100%;
     align-items: center;
-    margin: auto;
   }
   .titre_lacarte_coeur {
     position: relative;
@@ -1016,6 +1036,7 @@ body {
   background-color: #a16be0;
   background-blend-mode: lighten;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3137254902);
+  z-index: 2;
 }
 
 .searchbutton a {
@@ -1057,7 +1078,7 @@ body {
   background-color: rgb(153, 226, 208);
   position: relative;
   height: 40px;
-  padding: 15px 12px;
+  padding: 12px 12px;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -1210,6 +1231,7 @@ abbr {
 }
 
 .fa-left-long {
+  width: 20%;
   color: black;
   margin-left: 20px;
   font-size: 25px;
@@ -1358,6 +1380,11 @@ html, body {
 .loader-container {
   animation: fadeOut 3s forwards;
   -webkit-animation: fadeOut 3s forwards;
+}
+
+.loader-container {
+  animation: rideau 3s forwards;
+  -webkit-animation: rideau 3s forwards;
 }
 
 input {
