--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -21,7 +21,6 @@ body {
     padding-bottom: 30px;
     background-color: #F2F4F4;
     padding-top: 20px;
-   
   }
 
 .etape {
@@ -35,8 +34,6 @@ body {
    
   }
 
-
-
 //Section menu sous forme de cartes//
 
 .menus {
@@ -49,6 +46,7 @@ body {
 
 .section-title3{
     padding-left: 5px; 
+    flex-grow: 2;
   }
   
 .carte img {
@@ -141,15 +139,15 @@ body {
     bottom: 30px;    
     z-index: 1;
     padding-bottom: 30px;
-    margin:0;
+    margin: auto;
     top: -70px;
   }
 
 .titre_lacarte_coeur {
     position: relative;
-    width: 70%;
-    padding-left: 15px;
-    
+    width: 70%;   
+    align-items:start;
+    padding-left: 10px;  
   }
 
 .titre_lacarte {
@@ -164,6 +162,9 @@ body {
     position: relative;
     padding-right: 0; 
     width: 100%;
+    text-align:start;
+    align-items:flex-start;
+    justify-content:flex-start;  
   }
 
 
@@ -187,7 +188,7 @@ body {
     -moz-transition:all 0.5s;
     -ms-transition:all 0.5s;
     -o-transition:all 0.5s;   
-}
+  }
 
 .article {
     height: 72px;
@@ -205,8 +206,7 @@ body {
     -webkit-transition:all 0.5s ;
     -moz-transition:all 0.5s ;
     -ms-transition:all 0.5s ;
-    -o-transition:all 0.5s ;
-   
+    -o-transition:all 0.5s ; 
   } 
    
 .plats {
@@ -225,8 +225,7 @@ body {
 .menu:hover .plats .validation {
     width:80px;
     position: relative;
-    align-items: flex-start;
-   
+    align-items: flex-start; 
   }
 
 .menu-txt {
@@ -276,24 +275,23 @@ body {
 
 .entrees, .plates, .desserts {
     gap: 5px; 
-    margin-left: 5px;
-    
+    margin-left: 5px;  
   }
 
 .entrees {
   animation: decalage 2s ;
   -webkit-animation: decalage 2s ;
-}
+  }
 
 .plates {
   animation: decalage 2.5s;
   -webkit-animation: decalage 2.5s;
-}
+  }
 
 .desserts {
   animation: decalage 3s;
   -webkit-animation: decalage 3s;
-}
+  }
 
 
 .subtitle_lacarte {
@@ -344,20 +342,19 @@ body {
 
   .fonctionnement {
     width: 100%;
-    font-size: 14px;    
-     
+    font-size: 14px;       
   }
 
   .cartes {
     display:flex;
     flex-wrap: wrap;
-    justify-content:space-evenly;
+    justify-content:space-around;
     align-items: center;
     align-content: center;
     flex-direction: row;
     width: 100%;    
     margin: auto;
-   
+    gap: 10px; 
   }
 
   .carte, .enchantee, .lapalette {
@@ -366,8 +363,9 @@ body {
     justify-content:flex-start;
     align-items: center;
     flex-direction:row;
-    width: 350px;
-    
+    width:90%;
+    margin-right: 5%;
+    margin-bottom: 5%; 
   }
   
   .img-enchantee-accueil, .img-lapalette-accueil {
@@ -413,24 +411,26 @@ body {
   
   .titre_lacarte_coeur {
     position: relative;
-    width: 70%;
-    padding-left: 200px;
-    
+    width: 100%; 
+    padding: 0;   
+  }
+
+  .titre_lacarte {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
   }
 
   .subtitle_lacarte {
     margin-left: 20%;
     width: 5%;
   }
-
-  
 }
 
   //Media query Desktop 1024px//
 @media (min-width: 1023.98px) and (max-width: 1439.98px){
 
   .main-container{
-    max-width: 1439.98px;
     width: 100%;
   }
 
@@ -450,21 +450,21 @@ body {
   }
 
   .section-title3 {
-    padding-left: 85px;
-   
+    padding-left: 85px; 
   }
 
-  .cartes {
+   .cartes {
     display:flex;
-    flex-wrap:wrap;
-    justify-content:space-evenly;
+    flex-wrap: wrap;
+    justify-content:space-around;
     align-items: center;
     align-content: center;
     flex-direction: row;
-    width: 100%;    
-    margin: auto;
-   
+    width: 90%;   
+    gap: 10px;
+    margin-left: 80px; 
   }
+
 
   .carte, .enchantee, .lapalette {
     display:flex;
@@ -472,8 +472,9 @@ body {
     justify-content:flex-start;
     align-items: center;
     flex-direction:row;
-    width: 360px;
-    
+    width:100%;
+    margin-right: 15%;
+    margin-bottom: 10%;  
   }
   
   .img-enchantee-accueil, .img-lapalette-accueil {
@@ -490,33 +491,35 @@ body {
   }
 
   .lacarte {
-    width: 100%;
+    width: 80%;
     align-items:center;
-   
+    margin: auto;
   }
 
   .titre_lacarte_coeur {
     position: relative;
-    width: 70%;
-    padding-left: 290px;
-     
+    width: 100%;
+    margin: auto;
+    padding: 0;
   }
 
   .titre_lacarte {
     font-size: 25px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
   }
 
   .menu {
-    width: 50%;
+    width: 60%;
     justify-content:center;
     align-items: center;
-    margin: auto;
-   
+    margin: auto;     
   }
 
   .subtitle_lacarte {
     width: 4%;
-   margin-left: 205px;  
+   margin-left: 20%;  
   }
 }
 
@@ -533,7 +536,6 @@ body {
     padding-left: 8%;
   }
 
-
   .etape {
     display:inline-block;
     justify-content:center;
@@ -545,20 +547,19 @@ body {
   }
 
   .section-title3 {
-    padding-left: 9.5%;
-   
+    padding-left: 9.5%; 
   }
 
   .cartes {
     display:flex;
     flex-wrap: wrap;
-    justify-content:space-evenly;
+    justify-content: space-around;
     align-items: center;
     align-content: center;
     flex-direction: row;
-    width: 100%;    
-    margin: auto;
-   
+    width:90%; 
+    gap:10px;
+    margin-left: 7%;
   }
 
   .carte, .enchantee, .lapalette {
@@ -567,8 +568,9 @@ body {
     justify-content:flex-start;
     align-items: center;
     flex-direction:row;
-    width: 500px;
-    
+    width:85%;
+    margin-right: 5%;
+    margin-bottom: 5%;  
   }
   
   .img-enchantee-accueil, .img-lapalette-accueil {
@@ -592,17 +594,21 @@ body {
 
   .titre_lacarte_coeur {
     position: relative;
-    width: 70%;
-    padding-left: 450px;
-     
+    width: 100%;
+    margin: auto;
+    padding: 0;
   }
 
   .titre_lacarte {
     font-size: 25px;
+    text-align:center;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
   }
 
   .menu {
-    width: 45%;
+    width: 60%;
     justify-content: center;
     align-items: center;
     margin: auto;
@@ -610,7 +616,7 @@ body {
 
   .subtitle_lacarte {
     width: 3%;
-   margin-left: 320px;  
+    margin-left: 20%;  
   }
 
 }
