--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -216,10 +216,12 @@ abbr {
   }
 
 .gris2 {
-    left: 220px;
+    left: 60%;
+    bottom:40px;
   }
 
 .gris3 {
-    left: 240px;
+    left: 62%;
+    bottom:40px;
   }
 }
