revue animation du coeur

--- a/Sass/base/_animations.scss
+++ b/Sass/base/_animations.scss
@@ -32,6 +32,17 @@
 }
 }
 
+//Animation pour le coeur//
+
+@keyframes remplissage {
+  bottom {
+    opacity: 0;
+  }
+  top {
+    opacity: 1;
+  }
+}
+
 //Animation pour le check//
 
 @keyframes transleteX {
