--- a/Sass/base/_typography.scss
+++ b/Sass/base/_typography.scss
@@ -18,7 +18,7 @@
   }
 
 .section-title2, .section-title3 {   
-    font-size: 24px;
+    font-size: 1.5em;
     font-weight: 700;
     line-height: 28px;
     letter-spacing: 0em;
@@ -54,7 +54,7 @@ ul {
   } 
 
 b {    
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 500;
     line-height: 18.75px;
     letter-spacing: 0em;
@@ -63,7 +63,7 @@ b {
   }
 
 ::placeholder, input {
-  font-size: 16px;
+  font-size: 1em;
   }
 
  
