--- a/Sass/components/_icones.scss
+++ b/Sass/components/_icones.scss
@@ -71,22 +71,22 @@ abbr {
   }
 
 .fa-heart, .empty, .gris {
-    position: absolute;
-    top: 18%;
-    left: 85%;
-    color: #FFFFFF;
-    background-color: #FFFFFF;
-    -webkit-text-stroke-width: 0.8px;
-    -webkit-text-stroke-color: black;
-    font-size: 1.5em;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    animation-name: direction;
-    position: absolute;  
-  }
+     position: absolute;
+     top: 18%;
+     left: 85%;
+     color: #FFFFFF;
+     background-color: #FFFFFF;
+     -webkit-text-stroke-width: 0.8px;
+     -webkit-text-stroke-color: black;
+     font-size: 1.5em;
+     border-radius: 50%;
+     -webkit-border-radius: 50%;
+     -moz-border-radius: 50%;
+     -ms-border-radius: 50%;
+     -o-border-radius: 50%;
+     animation: opacity 5s ease-in-out;
+     -webkit-animation: opacity 5s ease-in-out;
+}
 
 .gris, .gris2, .gris3 {
     background-color:rgba(246, 246, 246, 1);
@@ -96,22 +96,24 @@ abbr {
 
 .fa-heart::before {
     font-weight: bold;
-    transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
+    transition: all 5s ease-in-out;
+    -webkit-transition: all 5s ease-in-out;
+    -moz-transition: all 5s ease-in-out;
+    -ms-transition: all 5s ease-in-out;
+    -o-transition: all 5s ease-in-out;
     vertical-align: baseline;
+    animation: opacity 5s ease-in-out;
+    -webkit-animation: opacity 5s ease-in-out;
 }
 
 .fa-heart:hover::before{
     background-clip: text;
     color:transparent ;
-    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%); 
+    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     -webkit-text-stroke-color: transparent;
     -webkit-text-stroke-width: 0px;
     
-  }
+}
   
 .fa-left-long {
     width: 20%;
