--- a/Sass/layouts/_section.scss
+++ b/Sass/layouts/_section.scss
@@ -242,12 +242,14 @@ body {
 
 .prix-txt {
     width: 30px;
-    position:relative;
+    position:fixed;
     top:24px;
-    left: -2px;
+    left: -30px;
     font-weight: 700;
-    font-size: 0.850em;  
+    font-size: 0.850em; 
+    
   }
+
   
 .accompagnement  {
     position:relative;
@@ -257,7 +259,7 @@ body {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    padding-right: 10px;
+    padding-right: 40px;
     padding-bottom: 10px;
   }
  
