--- a/Sass/main.css
+++ b/Sass/main.css
@@ -55,14 +55,6 @@
     -o-transform: translateY(-100vh);
   }
 }
-@keyframes remplissage {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 @keyframes transleteX {
   0% {
     transform: translateX(0px);
@@ -172,7 +164,7 @@
 }
 
 .section-title2, .section-title3 {
-  font-size: 24px;
+  font-size: 1.5em;
   font-weight: 700;
   line-height: 28px;
   letter-spacing: 0em;
@@ -207,7 +199,7 @@ ul {
 }
 
 b {
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 500;
   line-height: 18.75px;
   letter-spacing: 0em;
@@ -216,11 +208,11 @@ b {
 }
 
 ::-moz-placeholder {
-  font-size: 16px;
+  font-size: 1em;
 }
 
 ::placeholder, input {
-  font-size: 16px;
+  font-size: 1em;
 }
 
 #footer {
@@ -616,7 +608,6 @@ body {
   position: relative;
   padding-right: 0;
   width: 100%;
-  text-align: start;
   align-items: flex-start;
   justify-content: flex-start;
 }
@@ -696,9 +687,9 @@ body {
 
 .prix-txt {
   width: 30px;
-  position: relative;
+  position: fixed;
   top: 24px;
-  left: -2px;
+  left: -30px;
   font-weight: 700;
   font-size: 0.85em;
 }
@@ -711,7 +702,7 @@ body {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding-right: 10px;
+  padding-right: 40px;
   padding-bottom: 10px;
 }
 
@@ -1054,7 +1045,7 @@ body {
   -o-border-radius: 25px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
   width: 60%;
-  font-size: 16px;
+  font-size: 1em;
   line-height: 19px;
   letter-spacing: 0em;
   border: none;
@@ -1068,7 +1059,7 @@ body {
   opacity: 0.8;
   background-color: #a16be0;
   background-blend-mode: lighten;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.3137254902);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
   z-index: 2;
 }
 
@@ -1107,7 +1098,7 @@ body {
   }
 }
 .check {
-  width: 60px;
+  width: 50px;
   background-color: rgb(153, 226, 208);
   position: relative;
   height: 40px;
@@ -1234,6 +1225,8 @@ abbr {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  animation: opacity 5s ease-in-out;
+  -webkit-animation: opacity 5s ease-in-out;
 }
 
 .gris, .gris2, .gris3 {
@@ -1244,14 +1237,14 @@ abbr {
 
 .fa-heart::before {
   font-weight: bold;
-  transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
+  transition: all 5s ease-in-out;
+  -webkit-transition: all 5s ease-in-out;
+  -moz-transition: all 5s ease-in-out;
+  -ms-transition: all 5s ease-in-out;
+  -o-transition: all 5s ease-in-out;
   vertical-align: baseline;
-  animation: remplissage 2s ease-in-out;
-  -webkit-animation: remplissage 2s ease-in-out;
+  animation: opacity 5s ease-in-out;
+  -webkit-animation: opacity 5s ease-in-out;
 }
 
 .fa-heart:hover::before {
